light and dark mode fix 2

--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,7 @@ img {
     left: 0%;
     width: 100%;
     transform: translate(27%, -40%);
+    color: white;
 }
 #dark .react-switch-handle {
     transform: translateX(105px) !important;
